TEST_PROGRAMS/VALID/07/valid_decassing.go
package main

func main() {
	x, y := 1, "hello word"
}
