TEST_PROGRAMS/INVALID/04/80.go
package main

func main() {
    // Illegal number of operands
    x, y := 1
}
